fix: stars block height, extra margins, font sizes

--- a/css/style.css
+++ b/css/style.css
@@ -175,17 +175,19 @@ body {
 }
 
 .hotel-info__name {
-  margin-top: 5px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 .hotel-info__offer {
-  margin-top: 5px;
+  margin-top: 0;
   margin-left: 14px;
 }
 
 .hotel-info__description {
-  margin: 5px 0 0 0;
+  margin: 0;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .hotel-wrapper {
@@ -206,8 +208,15 @@ body {
 }
 
 .stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+}
+
+.stars__image {
+  margin-right: 3px;
 }
 
 .offer {
@@ -238,12 +247,18 @@ body {
   color: #FFFFFF;
   background-color: #EC1F46;
   border-radius: 4px;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .rating__text {
   font-weight: 600;
   font-size: 8px;
   line-height: 10px;
+}
+
+.rating__maximum {
+  font-size: 11px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
