--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -6,13 +6,15 @@
         align-items: center
         justify-content: space-between
         &__name
-            margin-top: 5px
+            margin-top: 0
             margin-bottom: 0
         &__offer
-            margin-top: 5px
+            margin-top: 0
             margin-left: 14px
         &__description
-            margin: 5px 0 0 0
+            margin: 0
+            font-size: 12px
+            line-height: 15px
     &-wrapper
         display: flex
         align-items: center
@@ -22,7 +24,10 @@
         font-size: 24px
         line-height: 30px
 .stars
+    display: flex
     flex-basis: 100%
+    &__image
+        margin-right: 3px
 .offer
     padding: 4px 9px
     background-color: $primary
@@ -42,7 +47,11 @@
     color: $light
     background-color: $primary
     border-radius: 4px
+    font-size: 14px
+    line-height: 18px
     &__text
         font-weight: 600
         font-size: 8px
         line-height: 10px
+    &__maximum
+        font-size: 11px
